# Install-Directory-for-Zephyr-RTOS

lib/: libvsomeip3-e2e.so.3.4.10
lib/cmake/vsomeip3/: vsomeip3Targets-relwithdebinfo.cmake  vsomeip3Targets.cmake
lib/pkgconfig/: vsomeip3.pc
test_example/: CMakeLists.txt
test_example/src/: service-example.cpp
